--- a/style.css
+++ b/style.css
@@ -30,6 +30,33 @@
 /* universal tags */
 * {
   box-sizing: border-box;
+}
 
+/* typography */
 
+h1 {
+  font-size: var(--font-large);
+  font-weight: var(--weigt-bold);
+  color: var(--color-black);
+}
+
+h2 {
+  font-size: var(--font-medium);
+  font-weight: var(--weight-semi-bold);
+  color: var(--color-black);
+  margin: 8px 0;
+}
+
+h3 {
+  font-size: var(--font-regular);
+  font-weight: var(--weight-regular);
+  color: var(--color-black);
+  margin: 8px 0;
+}
+
+p {
+  font-size: var(--font-regular);
+  font-weight: var(--weight-regular);
+  color: var(--color-black);
+  margin: 4px 0;
 }
