--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 /* global */
+
 :root {
   /* Color */
   --color-white: #ffffff;
@@ -28,7 +29,11 @@
 
   /* Size */
   --size-border-radius: 4px;
+
+  /* Animation */
+  --animation-duration: 300ms;
 }
+
 
 /* universal tags */
 * {
@@ -92,11 +97,10 @@ p {
 #navbar {
   display: flex;
   justify-content: space-between;
-  background-color: var(--color-dark-white);
+  background-color: var(white);
   align-items: center;
   color: var(--color-black);
   padding: 16px;
-
 }
 
 .navbar__menu {
@@ -114,11 +118,10 @@ p {
   margin: 0 40px;
   cursor: pointer;
   border-radius: var(--size-border-radius);
-
 }
 
 .navbar__menu__item.active {
-  border: 1px solid var(--color-dark-white);
+  border: 1px solid var(--color-white);
   border-radius: var(--size-border-radius);
 }
 
@@ -154,5 +157,76 @@ p {
   padding: 8px 12px;
   border: 2px solid var(--color-white);
   border-radius: 4px;
+}
 
+/* Section common */
+.section {
+  padding: 50px;
+  text-align: center;
+  max-width: 1200px;
+  margin: auto;
+}
+
+/* About */
+.about__majors {
+  display: flex;
+  justify-content: space-between;
+  margin: 80px 0;
+}
+
+.major__icon {
+  width: 170px;
+  height: 170px;
+  line-height: 170px;
+  font-size: 80px;
+  color: var(--color-white);
+  background-color: #515866;
+  margin: auto;
+  margin-bottom: 16px;
+  border-radius: 50%;
+}
+
+.major__icon i {
+  transition: all var(--animation-duration) ease;
+}
+
+.major__icon i:hover {
+  color: var(--color-blue);
+  transform: rotate(-5deg) scale(1.01);
+}
+
+.major__title,
+.major__description {
+  color: var(--color-dark-grey);
+}
+
+.major__description {
+  font-size: var(--font-small);
+}
+
+.job {
+  display: flex;
+  align-items: center;
+}
+
+.job__logo {
+  font-size: var(--font-micro);
+}
+
+.job__description {
+  margin: 0 16px;
+  text-align: left;
+}
+
+.job__name,
+.job__period {
+  color: var(--color-light-grey);
+}
+
+.job__name {
+  font-size: var(--font-small);
+}
+
+.job__period {
+  font-size: var(--font-micro);
 }
