--- a/style.css
+++ b/style.css
@@ -163,6 +163,11 @@ p {
 .section {
   padding: 50px;
   text-align: center;
+  margin: auto;
+  max-width: 1200px;
+}
+
+.section__container {
   max-width: 1200px;
   margin: auto;
 }
@@ -209,13 +214,10 @@ p {
   align-items: center;
 }
 
-.job__logo {
-  font-size: var(--font-micro);
-}
-
 .job__description {
-  margin: 0 16px;
+  margin: 0px 16px;
   text-align: left;
+
 }
 
 .job__name,
@@ -229,4 +231,59 @@ p {
 
 .job__period {
   font-size: var(--font-micro);
+}
+
+/* Skills */
+#skills {
+  background-color: var(--color-yellow);
+}
+
+.skillset {
+  display: flex;
+  background-color: var(--color-light-grey);
+  color: var(--color-light-white);
+  margin: 20px 0;
+}
+
+.skillset__title {
+  color: var(--color-white);
+}
+
+.skillset__left {
+  flex-basis: 60%;
+  background-color: var(--color-dark-grey);
+  padding: 20px 40px;
+}
+
+.skill__description {
+  display: flex;
+  justify-content: space-between;
+}
+
+.skill {
+  margin-bottom: 25px;
+}
+
+.skill__bar {
+  width: 100%;
+  height: 3px;
+  background-color: grey;
+}
+
+.skill__value {
+  height: 3px;
+  background-color: orange;
+}
+
+.skillset_right {
+  flex-basis: 40%;
+}
+
+.tools {
+  background-color: var(--color-grey);
+}
+
+.tools,
+.Etc {
+  padding: 20px;
 }
