--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@ p {
   background-color: transparent;
   width: 100%;
   transition: all var(--animation-duration) ease-in-out;
+  z-index: 1;
 }
 
 #navbar.navbar--dark {
@@ -179,6 +180,11 @@ p {
   padding: 8px 12px;
   border: 2px solid var(--color-white);
   border-radius: 4px;
+}
+
+.home__contact:hover {
+  background-color: var(--color-yellow);
+  color: black;
 }
 
 /* Section common */
