--- a/style.css
+++ b/style.css
@@ -416,7 +416,7 @@ p {
 
 /* Contact */
 #contact {
-  background-color: rgb(81, 88, 102)
+  background-color: rgb(81, 88, 102);
 }
 
 .contact__tittle,
@@ -442,6 +442,27 @@ p {
 .contact__links i:hover {
   transform: scale(1.1);
   color: #73aace;
+}
+
+/* Scroll */
+.arrow__up {
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  width: 50px;
+  height: 50px;
+  font-size: 30px;
+  color: var(--color-white);
+  background-color:rgb(81, 88, 102);
+  border-radius: 50%;
+  opacity: 0;
+  pointer-events: none;
+  transition: opactiy 300ms ease-in;
+}
+
+.arrow__up.visible {
+  opacity: 0.8;
+  pointer-events: auto;
 }
 
 /* For below 768px screen width */
