--- a/style.css
+++ b/style.css
@@ -159,6 +159,7 @@ p {
 /* Home */
 #home {
   background: url("imgs/main_background.png") center/cover no-repeat;
+  /* background: url("imgs/background.png") center/cover no-repeat; */
   padding: 40px;
   padding-top: 120px;
   text-align: center;
